--- a/index.html
+++ b/index.html
@@ -1,32 +1,93 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Naksh Official</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Naksh | Portfolio</title>
 
-<style>
-body {
-  font-family: system-ui;
-  margin: 40px;
-  background:#0b0f19;
-  color:#e5e7eb;
-}
-a { color:#60a5fa; text-decoration:none; font-weight:600 }
-.card { background:#111827; padding:20px; border-radius:12px; max-width:700px }
-</style>
+  <style>
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      background: #0b0f19;
+      color: #e5e7eb;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .card {
+      background: #111827;
+      padding: 40px;
+      border-radius: 18px;
+      max-width: 720px;
+      width: 90%;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+      text-align: center;
+    }
+
+    h1 {
+      margin-top: 0;
+      font-size: 2.2rem;
+    }
+
+    p {
+      font-size: 1.1rem;
+      line-height: 1.6;
+      color: #d1d5db;
+    }
+
+    .links {
+      margin-top: 30px;
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+    }
+
+    a {
+      display: block;
+      padding: 14px;
+      border-radius: 12px;
+      background: #1f2933;
+      color: #60a5fa;
+      text-decoration: none;
+      font-weight: 600;
+      transition: transform 0.15s ease, background 0.15s ease;
+    }
+
+    a:hover {
+      background: #243041;
+      transform: translateY(-2px);
+    }
+
+    .footer {
+      margin-top: 30px;
+      font-size: 0.9rem;
+      color: #9ca3af;
+    }
+  </style>
 </head>
 
 <body>
-<div class="card">
-<h1>🚀 Naksh Official</h1>
-<p>SkySense • Cubing Zone • Projects • Portfolio</p>
+  <div class="card">
+    <h1>👋 Hi, I’m Naksh</h1>
 
-<ul>
-  <li><a href="skysense.html">🌩 SkySense Weather</a></li>
-  <li><a href="cubing.html">🧩 Cubing Zone</a></li>
-  <li><a href="login.html">🔐 Login (coming soon)</a></li>
-</ul>
-</div>
+    <p>
+      I’m a student builder interested in technology, problem-solving, and STEM.
+      This site is my personal portfolio where I’ll showcase my projects,
+      learning journey, and future work.
+    </p>
+
+    <div class="links">
+      <a href="portfolio.html">📁 View Portfolio (coming soon)</a>
+      <a href="#">📄 Resume (coming soon)</a>
+      <a href="#">📬 Contact (coming soon)</a>
+    </div>
+
+    <div class="footer">
+      Built with GitHub Pages • More coming soon 🚀
+    </div>
+  </div>
 </body>
 </html>
