Update portfolio link text to remove 'coming soon'

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </p>
 
     <div class="links">
-      <a href="portfolio.html">📁 View Portfolio (coming soon)</a>
+      <a href="portfolio.html">📁 View Portfolio</a>
       <a href="#">📬 Contact (coming soon)</a>
     </div>
 
