--- a/index.html
+++ b/index.html
@@ -1,92 +1,111 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Naksh | Portfolio</title>
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Naksh Official</title>
   <style>
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #0b0f19;
-      color: #e5e7eb;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
+    :root{
+      --bg1:#060912;
+      --bg2:#0a1224;
+      --card:rgba(255,255,255,.06);
+      --border:rgba(255,255,255,.10);
+      --text:rgba(255,255,255,.92);
+      --muted:rgba(255,255,255,.70);
+      --accent:rgba(120,170,255,.95);
+      --shadow: 0 16px 45px rgba(0,0,0,.45);
+      --radius: 18px;
     }
-
-    .card {
-      background: #111827;
-      padding: 40px;
-      border-radius: 18px;
-      max-width: 720px;
-      width: 90%;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.4);
-      text-align: center;
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      min-height:100vh;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(1200px 600px at 20% 10%, rgba(120,170,255,.18), transparent 60%),
+        radial-gradient(900px 500px at 80% 35%, rgba(100,255,200,.10), transparent 55%),
+        linear-gradient(180deg, var(--bg1), var(--bg2));
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:24px;
     }
-
-    h1 {
-      margin-top: 0;
-      font-size: 2.2rem;
+    .wrap{
+      width:min(920px, 100%);
     }
-
-    p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      color: #d1d5db;
+    .card{
+      background:var(--card);
+      border:1px solid var(--border);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:28px;
+      backdrop-filter: blur(10px);
     }
-
-    .links {
-      margin-top: 30px;
-      display: flex;
-      flex-direction: column;
-      gap: 14px;
+    h1{
+      margin:0 0 10px;
+      font-size: clamp(28px, 4vw, 42px);
+      letter-spacing:.2px;
     }
-
-    a {
-      display: block;
-      padding: 14px;
-      border-radius: 12px;
-      background: #1f2933;
-      color: #60a5fa;
-      text-decoration: none;
-      font-weight: 600;
-      transition: transform 0.15s ease, background 0.15s ease;
+    p{
+      margin:0 0 18px;
+      color:var(--muted);
+      line-height:1.5;
+      font-size: 15.5px;
     }
-
-    a:hover {
-      background: #243041;
+    .nav{
+      display:grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap:12px;
+      margin-top:14px;
+    }
+    a.btn{
+      text-decoration:none;
+      color:var(--text);
+      border:1px solid var(--border);
+      background: rgba(255,255,255,.05);
+      padding:14px 14px;
+      border-radius:14px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:10px;
+      font-weight:600;
+      transition: transform .12s ease, background .12s ease, border-color .12s ease;
+    }
+    a.btn:hover{
       transform: translateY(-2px);
+      background: rgba(120,170,255,.12);
+      border-color: rgba(120,170,255,.35);
     }
-
-    .footer {
-      margin-top: 30px;
-      font-size: 0.9rem;
-      color: #9ca3af;
+    .small{
+      margin-top:14px;
+      font-size:13px;
+      color:rgba(255,255,255,.55);
+      text-align:center;
+    }
+    @media (max-width:720px){
+      .nav{ grid-template-columns: 1fr; }
     }
   </style>
 </head>
-
 <body>
-  <div class="card">
-    <h1>👋 Hi, I’m Naksh</h1>
+  <main class="wrap">
+    <section class="card">
+      <h1>🚀 Hi, I’m Naksh</h1>
+      <p>
+        Welcome to my official portfolio site. This is where I’ll share my achievements,
+        projects, and learning journey. (More features coming soon.)
+      </p>
 
-    <p>
-      I’m a student builder interested in technology, problem-solving, and STEM.
-      This site is my personal portfolio where I’ll showcase my projects,
-      learning journey, and future work.
-    </p>
+      <div class="nav">
+        <a class="btn" href="portfolio.html">📌 Portfolio</a>
+        <a class="btn" href="projects.html">🧩 Projects</a>
+        <a class="btn" href="contact.html">📫 Contact</a>
+      </div>
 
-    <div class="links">
-      <a href="portfolio.html">📁 View Portfolio</a>
-      <a href="#">📬 Contact (coming soon)</a>
-    </div>
-
-    <div class="footer">
-      Built with GitHub Pages • More coming soon 🚀
-    </div>
-  </div>
+      <div class="small">Built with GitHub Pages • Updated often</div>
+    </section>
+  </main>
 </body>
 </html>
