Update navigation link from Projects to Contact

--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
   <main class="wrap">
     <div class="topbar">
       <a class="back" href="index.html">← Home</a>
-      <a class="back" href="projects.html">Projects →</a>
+      <a class="back" href="contact.html">Contact →</a>
     </div>
 
     <section class="card">
