Update school email address in contact.html

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
     <div class="emails">
       <div class="email">
         <span>School</span>
-        1086939@gmail.com
+        1086939@lcps.org
       </div>
       <div class="email">
         <span>Home</span>
