Update email address in index.html

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
   <script>
     // Email target
-    const emailTo = "1086939@gmail.com";
+    const emailTo = "nakshnamita@gmail.com";
 
     const nameEl = document.getElementById("name");
     const subjectEl = document.getElementById("subject");
