--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <span class="pill">Builder</span>
           <span class="pill">Weather</span>
           <span class="pill">Speedcubing</span>
-          <span class="pill">Portfolio in progress</span>
+          <span class="pill">Portfolio</span>
         </div>
 
         <hr>
