--- a/achievements.html
+++ b/achievements.html
@@ -1,290 +1,305 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Achievements | Naksh Official</title>
-
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Achievements • Naksh Official</title>
   <style>
-    :root {
-      --bg: #0b1020;
-      --panel: #121a30;
-      --text: #eaf0ff;
-      --muted: #b5c0df;
-      --accent: #6fd8ff;
-      --accent2: #9a8dff;
-      --border: rgba(147, 175, 255, 0.28);
-      --radius: 14px;
-      --shadow: 0 10px 24px rgba(0, 0, 0, 0.22);
+    :root{
+      --bg1:#060912;
+      --bg2:#0a1224;
+      --card:rgba(255,255,255,.06);
+      --border:rgba(255,255,255,.10);
+      --text:rgba(255,255,255,.92);
+      --muted:rgba(255,255,255,.70);
+      --accent:rgba(120,170,255,.95);
+      --shadow: 0 16px 45px rgba(0,0,0,.45);
+      --radius: 18px;
+      --glow: 0 0 0 1px rgba(120,170,255,.25), 0 14px 40px rgba(120,170,255,.12);
     }
 
-    * { box-sizing: border-box; }
+    *{box-sizing:border-box}
 
-    body {
-      margin: 0;
-      font-family: Inter, "Segoe UI", Roboto, Arial, sans-serif;
-      color: var(--text);
-      background: radial-gradient(circle at top right, #1f2c4f, var(--bg) 45%);
+    body{
+      margin:0;
+      min-height:100vh;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(1200px 600px at 20% 10%, rgba(120,170,255,.18), transparent 60%),
+        radial-gradient(900px 500px at 80% 35%, rgba(100,255,200,.10), transparent 55%),
+        linear-gradient(180deg, var(--bg1), var(--bg2));
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:24px;
     }
 
-    .container {
-      width: min(1100px, 92vw);
-      margin: 0 auto;
+    .wrap{ width:min(1020px, 100%); }
+
+    .topbar{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:12px;
+      margin-bottom:14px;
+      flex-wrap:wrap;
     }
 
-    .site-nav {
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      background: rgba(11, 16, 32, 0.82);
-      backdrop-filter: blur(8px);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    .menu{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
     }
 
-    .site-nav-inner {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 1rem;
-      padding: 0.9rem 0;
+    a.navLink, button.toggleBtn{
+      appearance:none;
+      cursor:pointer;
+      text-decoration:none;
+      color:var(--text);
+      border:1px solid var(--border);
+      background: rgba(255,255,255,.05);
+      padding:10px 12px;
+      border-radius:12px;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      gap:8px;
+      font-weight:700;
+      transition: transform .14s ease, background .14s ease, border-color .14s ease, box-shadow .14s ease;
+      font-size:14px;
     }
 
-    .brand { font-weight: 700; letter-spacing: 0.02em; }
-
-    .nav-links {
-      display: flex;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      gap: 0.4rem;
-      flex-wrap: wrap;
+    a.navLink:hover, button.toggleBtn:hover{
+      transform: translateY(-1px);
+      background: rgba(120,170,255,.12);
+      border-color: rgba(120,170,255,.35);
+      box-shadow: var(--glow);
     }
 
-    .nav-links a {
-      color: var(--muted);
-      text-decoration: none;
-      padding: 0.45rem 0.8rem;
-      border-radius: 999px;
-      transition: 0.2s ease;
+    a.navLink.active,
+    button.toggleBtn.active{
+      background: rgba(120,170,255,.18);
+      border-color: rgba(120,170,255,.45);
+      box-shadow: var(--glow);
     }
 
-    .nav-links a:hover,
-    .nav-links a.active {
-      color: var(--text);
-      background: linear-gradient(120deg, rgba(111, 216, 255, 0.24), rgba(154, 141, 255, 0.24));
+    .card{
+      background:var(--card);
+      border:1px solid var(--border);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:24px;
+      backdrop-filter: blur(10px);
     }
 
-    .hero { padding: 4rem 0 1.6rem; }
-    .hero h1 { font-size: clamp(2rem, 5vw, 3rem); margin: 0 0 0.4rem; }
-    .hero p { margin: 0; color: var(--muted); font-size: 1.05rem; }
-
-    .view-toggle {
-      margin-top: 1.1rem;
-      display: inline-flex;
-      padding: 0.25rem;
-      border-radius: 999px;
-      border: 1px solid var(--border);
-      background: rgba(18, 26, 48, 0.9);
-      gap: 0.3rem;
+    h1{
+      margin:0 0 8px;
+      font-size: clamp(28px, 4vw, 38px);
+      letter-spacing:.2px;
     }
 
-    .view-toggle button {
-      border: 0;
-      background: transparent;
-      color: var(--muted);
-      font-weight: 600;
-      border-radius: 999px;
-      padding: 0.45rem 0.9rem;
-      cursor: pointer;
+    .sub{
+      margin:0;
+      color:var(--muted);
+      line-height:1.55;
+      font-size: 15.5px;
     }
 
-    .view-toggle button[aria-pressed="true"] {
-      color: var(--text);
-      background: linear-gradient(120deg, rgba(111, 216, 255, 0.24), rgba(154, 141, 255, 0.24));
+    .toggle{
+      display:flex;
+      gap:10px;
+      margin:16px 0 14px;
+      flex-wrap:wrap;
     }
 
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 1rem;
-      margin: 1.2rem 0 1.8rem;
+    .view{display:none;}
+    .view.active{display:block;}
+
+    .grid{
+      display:grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap:12px;
+      margin-top:8px;
     }
 
-    .card {
-      background: linear-gradient(155deg, #172344, var(--panel));
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      padding: 1rem 1.1rem;
-      box-shadow: var(--shadow);
-      transition: transform 0.2s ease, border-color 0.2s ease;
+    .section{
+      border:1px solid var(--border);
+      background: rgba(255,255,255,.04);
+      border-radius:14px;
+      padding:14px;
     }
 
-    .card:hover { transform: translateY(-4px); border-color: rgba(111, 216, 255, 0.6); }
-    .card h3 { margin-top: 0; margin-bottom: 0.5rem; }
-    .card ul { margin: 0; padding-left: 1.15rem; color: var(--muted); }
-    .card li { margin: 0.35rem 0; }
-
-    .featured {
-      border: 1px solid rgba(111, 216, 255, 0.45);
-      background: linear-gradient(135deg, rgba(111, 216, 255, 0.14), rgba(154, 141, 255, 0.14));
-      border-radius: var(--radius);
-      padding: 1rem 1.1rem;
-      margin-bottom: 2rem;
+    .section h2{
+      margin:0 0 8px;
+      font-size:18px;
     }
 
-    .featured a { color: var(--accent); }
+    ul{
+      margin:0;
+      padding-left:18px;
+      color:var(--muted);
+      line-height:1.55;
+      font-size:14.5px;
+    }
+    li{margin:6px 0;}
 
-    .timeline {
-      display: none;
-      border-left: 2px solid rgba(154, 141, 255, 0.55);
-      padding-left: 1rem;
-      margin: 1rem 0 2rem;
+    .featured{
+      margin-top:12px;
+      border:1px solid rgba(120,170,255,.35);
+      background: rgba(120,170,255,.12);
+      border-radius:14px;
+      padding:14px;
     }
 
-    .timeline.active,
-    .categories.active { display: block; }
-
-    .point { margin-bottom: 1rem; }
-    .point h3 { margin: 0 0 0.25rem; }
-    .point p { margin: 0; color: var(--muted); }
-
-    footer {
-      text-align: center;
-      padding: 0.8rem 0 2rem;
-      color: var(--muted);
-      font-weight: 600;
+    .featured h2{
+      margin:0 0 8px;
+      font-size:18px;
     }
 
-    @media (max-width: 720px) {
-      .site-nav-inner { flex-direction: column; align-items: flex-start; }
+    .featured a{color:#a8cbff; word-break:break-all;}
+
+    .gradeList{
+      display:grid;
+      gap:12px;
+      margin-top:8px;
+    }
+
+    .gradeItem{
+      border-left:2px solid rgba(120,170,255,.5);
+      padding:8px 0 8px 12px;
+      background: rgba(255,255,255,.03);
+      border-radius:10px;
+    }
+
+    .gradeItem h3{margin:0 0 6px; font-size:17px;}
+    .gradeItem p{margin:0; color:var(--muted); line-height:1.55; font-size:14.5px;}
+
+    .foot{
+      margin-top:14px;
+      text-align:center;
+      color:rgba(255,255,255,.55);
+      font-size:13px;
+    }
+
+    @media (max-width:780px){
+      .grid{grid-template-columns:1fr;}
     }
   </style>
-
 </head>
 <body>
-  <header class="site-nav">
-    <div class="container site-nav-inner">
-      <a class="brand" href="index.html">Naksh Official</a>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a class="active" href="achievements.html" aria-current="page">Achievements</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+  <main class="wrap">
+    <div class="topbar">
+      <div class="menu" aria-label="Site menu">
+        <a class="navLink" href="index.html">🏠 Home</a>
+        <a class="navLink" href="portfolio.html">📌 Portfolio</a>
+        <a class="navLink active" href="achievements.html" aria-current="page">🏅 Achievements</a>
+        <a class="navLink" href="contact.html">📫 Contact</a>
+      </div>
     </div>
-  </header>
 
-  <main class="container">
-    <section class="hero">
+    <section class="card">
       <h1>Achievements</h1>
-      <p>Highlights of my competitions, leadership, and activities.</p>
-      <div class="view-toggle" aria-label="Switch achievements view">
-        <button id="categoryBtn" type="button" aria-pressed="true">By Category</button>
-        <button id="gradeBtn" type="button" aria-pressed="false">By Grade</button>
-      </div>
-    </section>
+      <p class="sub">A quick view of competitions, leadership, honors, and activities.</p>
 
-    <section class="categories active" id="categoryView">
-      <div class="cards">
-        <article class="card">
-          <h3>Competitions</h3>
-          <ul>
-            <li>Math Olympiad: 5th grade winner; 6th grade 6th place; 7th grade currently participating.</li>
-            <li>Science Olympiad: 4th grade winner.</li>
-            <li>Odyssey of the Mind: 4th grade regional winner (went to states).</li>
-            <li>Odyssey of the Mind (6th): 1st regional, 2nd states, 21st in the world.</li>
-            <li>Noetic Math Contest: Fall 2024 National Honorable Mention; Spring 2025 National Honor Roll; Spring 2025 National Honorable Mention.</li>
-            <li>AMC, Math Kangaroo, CML, VML (this year 29/30).</li>
-          </ul>
-        </article>
-
-        <article class="card">
-          <h3>Leadership &amp; Clubs</h3>
-          <ul>
-            <li>Won SCA elections.</li>
-            <li>Chess club, coding club, and mock trial club.</li>
-            <li>Creating a math competition group.</li>
-            <li>Rubik's Cube competitions (official WCA participation).</li>
-          </ul>
-        </article>
-
-        <article class="card">
-          <h3>Awards &amp; Honors</h3>
-          <ul>
-            <li>Always Honor Roll (all A's).</li>
-            <li>School IMPACT award for character traits.</li>
-            <li>Many school and teacher awards over the years.</li>
-          </ul>
-        </article>
-
-        <article class="card">
-          <h3>Sports &amp; Activities</h3>
-          <ul>
-            <li>Running club (4th and 5th grade).</li>
-            <li>Taekwondo (4th–6th grade).</li>
-            <li>Cricket, soccer, volleyball, badminton, and pickleball.</li>
-            <li>Cricket medal and strong interest in arts.</li>
-          </ul>
-        </article>
-
-        <article class="card">
-          <h3>Rubik's Cube</h3>
-          <ul>
-            <li>WCA ID: 2025NAKS01.</li>
-            <li>Official profile and competition records are available on WCA.</li>
-            <li>Focused on improving speed and consistency.</li>
-          </ul>
-        </article>
+      <div class="toggle" aria-label="Achievements view toggle">
+        <button class="toggleBtn active" id="categoryBtn" type="button" aria-pressed="true">By Category</button>
+        <button class="toggleBtn" id="gradeBtn" type="button" aria-pressed="false">By Grade</button>
       </div>
 
-      <aside class="featured">
-        <h3>Featured Link: WCA Profile</h3>
-        <p>
+      <section class="view active" id="categoryView">
+        <div class="grid">
+          <article class="section">
+            <h2>Competitions</h2>
+            <ul>
+              <li>Math Olympiad: 5th grade winner; 6th grade 6th place; 7th grade currently participating.</li>
+              <li>Science Olympiad: 4th grade winner.</li>
+              <li>Odyssey of the Mind: 4th grade regional winner (went to states).</li>
+              <li>Odyssey of the Mind: 6th grade 1st regional, 2nd state, 21st world.</li>
+              <li>Noetic Math Contest: Fall 2024 National Honorable Mention; Spring 2025 National Honor Roll; Spring 2025 National Honorable Mention.</li>
+              <li>Math competitions: AMC, Math Kangaroo, CML, VML (29/30 this year).</li>
+            </ul>
+          </article>
+
+          <article class="section">
+            <h2>Leadership &amp; Clubs</h2>
+            <ul>
+              <li>Won SCA elections.</li>
+              <li>Chess club, coding club, mock trial club.</li>
+              <li>Creating a math competition group.</li>
+              <li>Rubik's cube competitions.</li>
+            </ul>
+          </article>
+
+          <article class="section">
+            <h2>Awards &amp; Honors</h2>
+            <ul>
+              <li>Always Honor Roll (all A's).</li>
+              <li>School IMPACT award.</li>
+              <li>Multiple school and teacher awards.</li>
+            </ul>
+          </article>
+
+          <article class="section">
+            <h2>Sports &amp; Activities</h2>
+            <ul>
+              <li>Running club (4th–5th grade).</li>
+              <li>Taekwondo (4th–6th grade).</li>
+              <li>Cricket, soccer, volleyball, badminton, pickleball.</li>
+              <li>Cricket medal.</li>
+            </ul>
+          </article>
+        </div>
+
+        <aside class="featured">
+          <h2>Rubik's Cube Profile</h2>
           <a href="https://www.worldcubeassociation.org/persons/2025NAKS01" target="_blank" rel="noopener noreferrer">https://www.worldcubeassociation.org/persons/2025NAKS01</a>
-        </p>
-      </aside>
-    </section>
+        </aside>
+      </section>
 
-    <section class="timeline" id="gradeView">
-      <article class="point">
-        <h3>Elementary (4th–5th)</h3>
-        <p>Won Science Olympiad (4th), won Odyssey of the Mind regional (4th), joined running club, and won Math Olympiad in 5th grade.</p>
-      </article>
-      <article class="point">
-        <h3>6th Grade</h3>
-        <p>Placed 6th in Math Olympiad and earned Odyssey of the Mind results: 1st regional, 2nd states, 21st world.</p>
-      </article>
-      <article class="point">
-        <h3>7th Grade</h3>
-        <p>Currently participating in Math Olympiad, earned Noetic honors, scored 29/30 in VML, and won SCA elections.</p>
-      </article>
-      <article class="point">
-        <h3>8th+</h3>
-        <p>Continuing leadership, clubs, academics, and Rubik's Cube growth.</p>
-      </article>
+      <section class="view" id="gradeView">
+        <div class="gradeList">
+          <article class="gradeItem">
+            <h3>4th Grade</h3>
+            <p>Science Olympiad winner, Odyssey of the Mind regional winner (went to states), and started running club.</p>
+          </article>
+          <article class="gradeItem">
+            <h3>5th Grade</h3>
+            <p>Math Olympiad winner and continued activities in running club and academics.</p>
+          </article>
+          <article class="gradeItem">
+            <h3>6th Grade</h3>
+            <p>Math Olympiad 6th place; Odyssey of the Mind: 1st regional, 2nd state, 21st world; taekwondo and multi-sport participation.</p>
+          </article>
+          <article class="gradeItem">
+            <h3>7th Grade</h3>
+            <p>Currently participating in Math Olympiad; Noetic Math Contest honors; VML score 29/30; won SCA elections and active in clubs.</p>
+          </article>
+        </div>
+      </section>
+
+      <div class="foot">More achievements will be added.</div>
     </section>
   </main>
 
-  <footer class="container">More achievements will be added!</footer>
-
   <script>
-    const categoryBtn = document.getElementById('categoryBtn');
-    const gradeBtn = document.getElementById('gradeBtn');
-    const categoryView = document.getElementById('categoryView');
-    const gradeView = document.getElementById('gradeView');
+    const categoryBtn = document.getElementById("categoryBtn");
+    const gradeBtn = document.getElementById("gradeBtn");
+    const categoryView = document.getElementById("categoryView");
+    const gradeView = document.getElementById("gradeView");
 
     function setView(mode) {
-      const categoryMode = mode === 'category';
-      categoryBtn.setAttribute('aria-pressed', String(categoryMode));
-      gradeBtn.setAttribute('aria-pressed', String(!categoryMode));
-      categoryView.classList.toggle('active', categoryMode);
-      gradeView.classList.toggle('active', !categoryMode);
+      const byCategory = mode === "category";
+      categoryBtn.classList.toggle("active", byCategory);
+      gradeBtn.classList.toggle("active", !byCategory);
+      categoryBtn.setAttribute("aria-pressed", String(byCategory));
+      gradeBtn.setAttribute("aria-pressed", String(!byCategory));
+      categoryView.classList.toggle("active", byCategory);
+      gradeView.classList.toggle("active", !byCategory);
     }
 
-    categoryBtn.addEventListener('click', () => setView('category'));
-    gradeBtn.addEventListener('click', () => setView('grade'));
+    categoryBtn.addEventListener("click", () => setView("category"));
+    gradeBtn.addEventListener("click", () => setView("grade"));
   </script>
 </body>
 </html>
