--- a/projects.html
+++ b/projects.html
@@ -58,8 +58,11 @@
       font-weight:600;
       border:1px solid var(--border);
       background:rgba(255,255,255,.04);
-      padding:10px 14px;
+      display:inline-flex;
+      align-items:center;
+      padding:8px 12px;
       border-radius:999px;
+      font-size:14px;
       transition:transform .12s ease, background .12s ease, border-color .12s ease, color .12s ease, box-shadow .12s ease;
     }
 
