--- a/index.html
+++ b/index.html
@@ -197,7 +197,6 @@
     }
   </style>
 </head>
-
 <body>
   <main class="wrap">
     <section class="card">
@@ -325,5 +324,13 @@
       }
     });
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+<script>
+const supabaseUrl = "https://uekwgzprcbwvgkghtgqk.supabase.co";
+const supabaseKey = "sb_publishable__L0ZL7D2KubRYloYaksQ8g_dCeRTDF3";
+
+const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+</script>
 </body>
 </html>
